# SRO

./: .gitignore  README.md
ESP32/SRO-MK4/SRO/: CMakeLists.txt.old  SRO.sln  SRO.vgdbproj  partitions.csv  sdkconfig
ESP32/SRO-MK4/SRO/main/: CMakeLists.txt  SRO_FtpServer.c  SRO_FtpServer.h  SRO_ProfileManager.c  SRO_ProfileManager.h  SRO_SystemCoordinator.c  SRO_SystemCoordinator.h  SRO_TemperatureControl.c  SRO_TemperatureControl.h  SRO_WebServer.c  SRO_WebServer.h  SRO_WebSocketBroadcast.c  SRO_WebSocketBroadcast.h  SRO_WebSocketServer.c  SRO_WebSocketServer.h  a2s_apa102.c  a2s_apa102.h  a2s_max6675.c  a2s_max6675.h  a2s_pid.c  a2s_pid.h  a2s_servo.c  a2s_servo.h  a2s_ssr.c  a2s_ssr.h  a2s_wifi.c  a2s_wifi.h  a2s_ws2812.c  a2s_ws2812.h  globals.h  main.c  main.h  wifi_credentials.h.example
esp32/: readme.md
esp32/SRO/: SRO.sln
esp32/SRO/MK2/: CMakeLists.txt  MK2.vgdbproj  sdkconfig
esp32/SRO_MK3/: CMakeLists.txt.old  Makefile  SRO_MK3.sln  SRO_MK3.vgdbproj  sdkconfig
esp32/SRO_MK3/main/: APA102C.h  CMakeLists.txt  MAX6675.c  MAX6675.h  SRO_PID.c  SRO_PID.h  a2s_mqtt.c  (+9 more)
pictures/parts/: readme.md
pictures/sro/: readme.md
profiles/: profile_0.json  profile_1.json  profile_2.json  profile_3.json  profile_4.json  profile_5.json  profile_6.json  profile_7.json  profile_8.json  profile_9.json  profile_names.json
www/: index.html  readme.md
www-WebStorm/: index.html
www-WebStorm/css/: bootstrap-icons.css
www/css/: bootstrap-custom.css  cmdButton.css
www/js/: cmdButton.js  data_handling.js  draw_chart.js  mqtt_config.js  sro_mqtt_app.js  tools.js
(+342 files in other folders)
